--- a/larafirststeps/resources/css/app.css
+++ b/larafirststeps/resources/css/app.css
@@ -1,11 +1,61 @@
-@import 'tailwindcss';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-@source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
-@source '../../storage/framework/views/*.php';
-@source '../**/*.blade.php';
-@source '../**/*.js';
 
-@theme {
-    --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-        'Segoe UI Symbol', 'Noto Color Emoji';
+h1{
+    @apply text-3xl font-bold mb-4
 }
+.table {
+    @apply table-auto w-full
+}
+
+.table th {
+    @apply px-6 py-2 bg-gray-50 font-medium text-gray-500 uppercase border leading-4 tracking-widest
+}
+
+.table tr{
+
+    @apply border
+}
+
+
+.table td {
+    @apply px-6 py-4 border whitespace-normal
+}
+
+label{
+    @apply mt-2 block
+}
+
+.form-control{
+    @apply block rounded-sm shadow-sm bg-purple-50 w-full
+}
+
+.btn{
+    @apply border rounded px-3 py-2 text-white font-bold inline-block transition-all 
+}
+
+.btn-danger { 
+    @apply bg-red-600 hover:bg-red-700 text-white px-4 py-2 rounded-lg shadow-sm hover:shadow-md transition-all duration-200; 
+}
+.btn-success {
+    @apply bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-lg shadow-sm hover:shadow-md transition-all duration-200; 
+}
+.btn-primary {
+    @apply bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg shadow-sm hover:shadow-md transition-all duration-200; 
+}
+.btn-warning {
+    @apply bg-yellow-600 hover:bg-yellow-700 text-white px-4 py-2 rounded-lg shadow-sm hover:shadow-md transition-all duration-200; 
+}
+
+.card {
+    @apply p-6 rounded shadow-sm
+}
+.card-white {
+    @apply bg-white
+}
+.card-success {
+    @apply bg-green-700
+}
+
