--- a/larafirststeps/resources/css/vue.css
+++ b/larafirststeps/resources/css/vue.css
@@ -1,3 +1,13 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
+h1{
+    @apply text-3xl text-center my-5
+}
+
+input, select, textarea{
+    @apply w-full
+}
